# c_project_template

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: coverage.cmake  flags.cmake  toolchain.cmake
cmake/toolchain/: aarch64-android-clang.cmake  aarch64-linux-gnu.cmake  aarch64-qnx-qcc.cmake  armhf-linux-gnu.cmake  x86_64-linux-gnu.cmake
doc/: CMakeLists.txt  UserGuide.md
include/: interface.h  module.h
scripts/: sendmail
src/: CMakeLists.txt  module.cc
tests/: CMakeLists.txt  test_module.cc  testtempl.cc
